# pyscrew

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
data/csv/: s01_variations-in-thread-degradation.csv  s02_variations-in-surface-friction.csv  s03_variations-in-assembly-conditions-1.csv  s04_variations-in-assembly-conditions-2.csv  s05_variations-in-upper-workpiece-fabrication.csv  s06_variations-in-lower-workpiece-fabrication.csv
data/metrics/: s01_variations-in-thread-degradation_metrics.json  s02_variations-in-surface-friction_metrics.json  s03_variations-in-assembly-conditions-1_metrics.json  s04_variations-in-assembly-conditions-2_metrics.json  s05_variations-in-upper-workpiece-fabrication_metrics.json  s06_variations-in-lower-workpiece-fabrication_metrics.json
data/notes/: s04_experiment-notes.csv  s05_experiment-notes.csv  s06_experiment-notes.csv
docs/scenarios/: s00_scenario-template.md  s01_thread-degradation.md  s02_surface-friction.md  s03_assembly-conditions-1.md  s04_assembly-conditions-2.md  s05_injection-molding-manipulations-upper-workpiece.md  s05_upper-workpiece.md  s06_lower-workpiece.md
src/pyscrew/: __init__.py  conversion.py  loading.py  main.py  processing.py  scenarios.yml  validation.py
tests/: conftest.py  test_dataset.py  test_integration.py  test_loading.py  test_main.py  test_transformers.py
tests/test_integration/: test_downloads.py  test_main.py
tests/test_pipeline/: test_loading.py  test_processing.py  test_validation.py
tests/test_transformers/: test_convert_dataset.py  test_handle_duplicates.py  (+4 more)
(+62 files in other folders)
